[gd_scene load_steps=26 format=2]

[ext_resource path="res://textures/bg1.png" type="Texture" id=1]
[ext_resource path="res://scenes/HBgLine.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/BgGrid.gd" type="Script" id=3]
[ext_resource path="res://scenes/VBgLine.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/Main.gd" type="Script" id=6]
[ext_resource path="res://scenes/Mask.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://textures/light.png" type="Texture" id=9]
[ext_resource path="res://scenes/Key.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Mouse.tscn" type="PackedScene" id=11]
[ext_resource path="res://shaders/CRT.tres" type="Material" id=12]
[ext_resource path="res://fonts/ARCADE_R.TTF" type="DynamicFontData" id=13]
[ext_resource path="res://scenes/EnemyT.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/EnemyC.tscn" type="PackedScene" id=15]
[ext_resource path="res://sounds/bump.wav" type="AudioStream" id=16]
[ext_resource path="res://sounds/success.wav" type="AudioStream" id=17]
[ext_resource path="res://sounds/collect.wav" type="AudioStream" id=18]
[ext_resource path="res://scenes/Battery.tscn" type="PackedScene" id=19]

[sub_resource type="CanvasItemMaterial" id=3]

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 13 )

[sub_resource type="CanvasItemMaterial" id=7]
blend_mode = 1

[sub_resource type="DynamicFont" id=8]
size = 12
font_data = ExtResource( 13 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )
ps_mask = ExtResource( 7 )
ps_key = ExtResource( 10 )
ps_enemies = [ ExtResource( 8 ), ExtResource( 14 ), ExtResource( 15 ) ]
keys_pos = [ null, null, null, null, null, null, null, null, null, null ]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 9 )
offset = Vector2( 320, 160 )
energy = 0.0

[node name="Background" type="Node2D" parent="."]

[node name="Uni" type="Sprite" parent="Background"]
material = SubResource( 3 )
texture = ExtResource( 1 )
centered = false

[node name="GridGen" type="Node2D" parent="Background"]
modulate = Color( 1, 1, 1, 0.12549 )
script = ExtResource( 3 )
h_bg_line = ExtResource( 2 )
v_bg_line = ExtResource( 4 )

[node name="GameOver" type="Label" parent="."]
visible = false
margin_top = 128.0
margin_right = 640.0
margin_bottom = 193.0
custom_colors/font_color = Color( 0.662745, 0.764706, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartLabel" type="Label" parent="GameOver"]
margin_top = 64.0
margin_right = 640.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0.662745, 0.764706, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Press r to restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GG" type="Label" parent="."]
visible = false
margin_top = 135.0
margin_right = 680.0
margin_bottom = 184.705
custom_colors/font_color = Color( 0.662745, 0.764706, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "well done!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevelLabel" type="Label" parent="GG"]
margin_top = 64.0
margin_right = 640.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0.662745, 0.764706, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Next mission in 3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 5 )]
speed = 200.0

[node name="Enemies" type="Node2D" parent="."]

[node name="Masks" type="Node2D" parent="."]

[node name="Start" parent="Masks" instance=ExtResource( 7 )]
radius = 64.0

[node name="End" parent="Masks" instance=ExtResource( 7 )]
position = Vector2( 640, 320 )
color = Color( 0, 1, 0, 1 )
radius = 64.0

[node name="Mouse" parent="." instance=ExtResource( 11 )]
randomness = 4

[node name="Battery" parent="." instance=ExtResource( 19 )]
modulate = Color( 1, 1, 1, 0.556863 )
light_mask = 0
position = Vector2( 610, 20 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = ExtResource( 12 )
margin_right = 640.0
margin_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mission" type="Label" parent="."]
material = SubResource( 7 )
margin_top = 9.0
margin_right = 640.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.376471, 0.392157, 0.45098, 1 )
custom_fonts/font = SubResource( 8 )
text = "Mission"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -7.0

[node name="Success" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
pitch_scale = 0.8

[node name="Collect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[connection signal="hidden" from="Player" to="." method="_on_Player_hidden"]
[connection signal="kill" from="Player" to="." method="_on_Player_kill"]
[connection signal="area_entered" from="Masks/End" to="." method="_on_End_area_entered"]
